--- a/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
+++ b/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
@@ -1,4 +1,3 @@
-begin template
 <div class="container-fluid">
   <div class="contract-determine">
     <div style="margin-right: 50px">
@@ -38,10 +37,7 @@ begin template
               oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"
               [disabled]="getOriganzationReviewer().length == 1"
             />
-            <div
-              class="col-md-10 participants--input"
-              style="display: flex; flex-direction: column"
-            >
+            <div class="col-md-10 participants--input" style="display: flex; flex-direction: column">
               <div class="participants--input" style="display: flex">
                 <div class="participants__name">
                   <div class="label_detail text-color">
@@ -157,6 +153,32 @@ begin template
               class="col-md-10 participants__content--input"
               style="display: flex; flex-direction: column"
             >
+
+                <!--Chọn ký bằng email hoặc số điện thoại-->
+                <div class="participants--input" style="display: flex">
+                  <div class="participants__name">
+                    <div class="label_detail text-color">
+  
+                      <div>
+                        <input type="radio" name="checkPhoneMailOrgSign_{{index}}" [value]=0 [(ngModel)]="d.typeSign" [value]=0/>
+                      </div>&nbsp;
+                      <div>
+                        Ký bằng email
+                      </div>
+                    </div>
+                  </div>
+                  <div class="participants__name">
+                    <div class="label_detail text-color">
+                      <div>
+                        <input type="radio" name="checkPhoneMailOrgSign_{{index}}" [(ngModel)]="d.typeSign" [value]=1/>
+                      </div>&nbsp;
+                      <div>
+                        Ký bằng số điện thoại
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
               <div class="participants--input" style="display: flex">
                 <div class="participants__name">
                   <div class="label_detail text-color">
