--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -36,13 +36,13 @@
 
             <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
 
-                     <!--Chọn ký bằng email hoặc số điện thoại-->
-                     <div class="participants--input" style="display: flex">
+                     <!--Chọn ký bằng email hoặc số điện thoại cho người xem xét tổ chức của tôi-->
+                     <!-- <div class="participants--input" style="display: flex">
                       <div class="participants__name">
                         <div class="label_detail text-color">
       
                           <div>
-                            <input type="radio" name="checkPhoneMailOrgReview_{{index}}" [value]=0 [(ngModel)]="d.typeSign"/>
+                            <input type="radio" name="checkPhoneMailOrgReview_{{index}}"/>
                           </div>&nbsp;
                           <div>
                             Ký bằng email
@@ -52,14 +52,14 @@
                       <div class="participants__name">
                         <div class="label_detail text-color">
                           <div>
-                            <input type="radio" name="checkPhoneMailOrgReview_{{index}}" [(ngModel)]="d.typeSign" [value]=1/>
+                            <input type="radio" name="checkPhoneMailOrgReview_{{index}}"/>
                           </div>&nbsp;
                           <div>
                             Ký bằng số điện thoại
                           </div>
                         </div>
                       </div>
-                    </div>
+                    </div> -->
 
               <div class="participants--input" style="display: flex">
                 <div class="participants__name">
@@ -515,7 +515,7 @@
               <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column; margin-bottom: 14px">
 
                   <!--Chọn ký bằng email hoặc số điện thoại-->
-                  <div class="participants--input" style="display: flex">
+                  <!-- <div class="participants--input" style="display: flex">
                     <div class="participants__name">
                       <div class="label_detail text-color">
                         <div>
@@ -536,7 +536,7 @@
                         </div>
                       </div>
                     </div>
-                  </div>
+                  </div> -->
 
                 <div class="participants--input">
                   <div class="participants__name">
