--- a/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
+++ b/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
@@ -154,13 +154,16 @@
               style="display: flex; flex-direction: column"
             >
 
-                <!--Chọn ký bằng email hoặc số điện thoại-->
+                <!--Chọn ký bằng email hoặc số điện thoại với người ký tổ chức của tôi-->
                 <div class="participants--input" style="display: flex">
                   <div class="participants__name">
                     <div class="label_detail text-color">
-  
-                      <div>
-                        <input type="radio" name="checkPhoneMailOrgSign_{{index}}" [value]=0 [(ngModel)]="d.typeSign" [value]=0/>
+                      <div *ngIf="d.typeSign">
+                        <input [(ngModel)]="d.typeSign" type="radio" name="checkPhoneMailOrgSign_{{index}}" [value]=0/>
+                      </div>&nbsp;
+
+                      <div *ngIf="!d.typeSign">
+                        <input [(ngModel)]="typeSign" type="radio" name="checkPhoneMailOrgSign_{{index}}" [value]=0/>
                       </div>&nbsp;
                       <div>
                         Ký bằng email
@@ -170,7 +173,7 @@
                   <div class="participants__name">
                     <div class="label_detail text-color">
                       <div>
-                        <input type="radio" name="checkPhoneMailOrgSign_{{index}}" [(ngModel)]="d.typeSign" [value]=1/>
+                        <input [(ngModel)]="d.typeSign" type="radio" name="checkPhoneMailOrgSign_{{index}}" [value]=1/>
                       </div>&nbsp;
                       <div>
                         Ký bằng số điện thoại
@@ -220,7 +223,7 @@
                 <!--                  <input type="checkbox">-->
                 <!--                  <span class="label text-color">OTP</span>-->
                 <!--                </div>-->
-                <div class="participants__name">
+                <div *ngIf="d.typeSign == 0 || !d.typeSign" class="participants__name">
                   <div class="label_detail text-color">
                     Email&nbsp;<span class="required-title">*</span>
                   </div>
@@ -229,6 +232,20 @@
                     <input
                       type="text"
                       placeholder="{{ 'nhap_email' | translate }}"
+                      [(ngModel)]="d.email"
+                    />
+                  </div>
+                </div>
+
+                <div *ngIf="d.typeSign == 1" class="participants__name">
+                  <div class="label_detail text-color">
+                    Số điện thoại&nbsp;<span class="required-title">*</span>
+                  </div>
+                  <div class="input-data">
+                    <img src="assets/img/login_email.svg" class="input-img" />
+                    <input
+                      type="text"
+                      placeholder="{{ 'Nhập số điện thoại' | translate }}"
                       [(ngModel)]="d.email"
                     />
                   </div>
@@ -244,43 +261,6 @@
                       >*</span
                     >
                   </div>
-                  <!-- <ng-multiselect-dropdown
-                    [(ngModel)]="d.sign_type"
-                    placeholder="{{ 'choose' | translate }}"
-                    [settings]="dropdownSignTypeSettings"
-                    [data]="isListSignNotPerson"
-                    (onSelect)="onItemSelect($event)"
-                    (ngModelChange)="selectWithOtp($event, d)"
-                  >
-                    <ng-template
-                      #optionsTemplate
-                      let-item
-                      let-option="option"
-                      let-id="id"
-                      let-isSelected="isSelected"
-                    >
-                      <div
-                        style="
-                          padding: 1px 10px;
-                          margin-right: 10px;
-                          right: 2px;
-                          top: -2px;
-                        "
-                      >
-                        <label
-                          style="color: #333; font-weight: normal"
-                          [ngStyle]="{
-                            'font-weight': isSelected ? 'bold' : ' normal',
-                            color: getContractConnectItems[id].isDisabled
-                              ? 'lightgrey'
-                              : ''
-                          }"
-                        >
-                          {{ getContractConnectItems[id].name }}
-                        </label>
-                      </div>
-                    </ng-template>
-                  </ng-multiselect-dropdown> -->
 
                    <!--Tổ chức của tôi chọn loại ký-->
                    <ng-multiselect-dropdown 
@@ -303,7 +283,7 @@
                  </ng-multiselect-dropdown>
                 </div>
 
-                <div class="participants__name">
+                <div *ngIf="d.typeSign == 0 || !d.typeSign" class="participants__name">
                   <div class="label_detail text-color">
                     Số điện thoại&nbsp;<span
                       *ngIf="getDataSignCka(d).length > 0"
@@ -322,6 +302,9 @@
                       oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"
                     />
                   </div>
+                </div>
+
+                <div *ngIf="d.typeSign == 1" class="participants__name">
                 </div>
 
                 <!--                <div *ngIf="getOtp(d)" class="participants-otp">-->
@@ -420,6 +403,41 @@
               class="col-md-10 participants__content--input"
               style="display: flex; flex-direction: column"
             >
+
+            <!--Chọn ký bằng email hoặc số điện thoại với văn thư tổ chức của tôi-->
+            <div class="participants--input" style="display: flex">
+              <div class="participants__name">
+                <div class="label_detail text-color">
+
+                  <div>
+                    <input *ngIf="!d.typeSign" type="radio" name="checkPhoneMailOrgDoc_{{index}}" [value]=0 checked/>
+                  </div>&nbsp;
+
+                  <div>
+                    <input *ngIf="d.typeSign" [(ngModel)]="d.typeSign" type="radio" name="checkPhoneMailOrgDoc_{{index}}" [value]=0/>
+                  </div>&nbsp;
+
+                  <div>
+                    Ký bằng email
+                  </div>
+                </div>
+              </div>
+              <div class="participants__name">
+                <div class="label_detail text-color">
+                  <div>
+                    <input *ngIf="!d.typeSign" type="radio" name="checkPhoneMailOrgDoc_{{index}}" [value]=1/>
+                  </div>&nbsp;
+
+                  <div>
+                    <input *ngIf="d.typeSign" [(ngModel)]="d.typeSign" type="radio" name="checkPhoneMailOrgDoc_{{index}}" [value]=1/>
+                  </div>&nbsp;
+                  <div>
+                    Ký bằng số điện thoại
+                  </div>
+                </div>
+              </div>
+            </div>
+
               <div class="participants--input" style="display: flex">
                 <div class="participants__name">
                   <div class="label_detail text-color">
@@ -611,20 +629,6 @@
           [(ngModel)]="item.name"
           [disabled]="item.type == 3"
         />
-        <!-- <div style="width: 120px">
-          {{ "Mã số thuế" | translate | uppercase }}&nbsp;<span *ngIf="this.flagUsbToken[id] === true">*</span
-          >
-          -
-        </div>
-        <input
-          class="input2"
-          type="text"
-          placeholder="{{
-            (item.type == 2 || item.type == 3 ? 'Nhập mã số thuế' : '') | translate
-          }}"
-          [(ngModel)]="item.taxCode"
-        /> -->
-        <!--        <input *ngIf="item.type == 3" type="text" [ngModel]="this.getNameIndividual" disabled>-->
       </div>
       <div
         *ngIf="this.dataParnterOrganization().length > 1"
@@ -889,6 +893,41 @@
                 class="col-md-10 participants__content--input"
                 style="display: flex; flex-direction: column"
               >
+
+               <!--Chọn ký bằng email hoặc số điện thoại với người ký tổ chức của đối tác-->
+            <div class="participants--input" style="display: flex">
+              <div class="participants__name">
+                <div class="label_detail text-color">
+
+                  <div>
+                    <input *ngIf="!d.typeSign" type="radio" name="checkPhoneMailPartSign_{{index}}_{{id}}" [value]=0 checked/>
+                  </div>&nbsp;
+
+                  <div>
+                    <input *ngIf="d.typeSign" [(ngModel)]="d.typeSign" type="radio" name="checkPhoneMailPartSign_{{index}}_{{id}}" [value]=0/>
+                  </div>&nbsp;
+
+                  <div>
+                    Ký bằng email
+                  </div>
+                </div>
+              </div>
+              <div class="participants__name">
+                <div class="label_detail text-color">
+                  <div>
+                    <input *ngIf="!d.typeSign" type="radio" name="checkPhoneMailPartSign_{{index}}_{{id}}" [value]=1/>
+                  </div>&nbsp;
+
+                  <div>
+                    <input *ngIf="d.typeSign" [(ngModel)]="d.typeSign" type="radio" name="checkPhoneMailPartSign_{{index}}_{{id}}" [value]=1/>
+                  </div>&nbsp;
+                  <div>
+                    Ký bằng số điện thoại
+                  </div>
+                </div>
+              </div>
+            </div>
+
                 <div class="participants--input" style="display: flex">
                   <div class="participants__name">
                     <div class="label_detail text-color">
@@ -1099,6 +1138,40 @@
                 class="col-md-10 participants__content--input"
                 style="display: flex; flex-direction: column"
               >
+
+                  <!--Chọn ký bằng email hoặc số điện thoại với văn thư đối tác-->
+            <div class="participants--input" style="display: flex">
+              <div class="participants__name">
+                <div class="label_detail text-color">
+
+                  <div>
+                    <input *ngIf="!d.typeSign" type="radio" name="checkPhoneMailPartDoc_{{index}}_{{id}}" [value]=0 checked/>
+                  </div>&nbsp;
+
+                  <div>
+                    <input *ngIf="d.typeSign" [(ngModel)]="d.typeSign" type="radio" name="checkPhoneMailPartDoc_{{index}}_{{id}}" [value]=0/>
+                  </div>&nbsp;
+
+                  <div>
+                    Ký bằng email
+                  </div>
+                </div>
+              </div>
+              <div class="participants__name">
+                <div class="label_detail text-color">
+                  <div>
+                    <input *ngIf="!d.typeSign" type="radio" name="checkPhoneMailPartDoc_{{index}}_{{id}}" [value]=1/>
+                  </div>&nbsp;
+
+                  <div>
+                    <input *ngIf="d.typeSign" [(ngModel)]="d.typeSign" type="radio" name="checkPhoneMailPartDoc_{{index}}_{{id}}" [value]=1/>
+                  </div>&nbsp;
+                  <div>
+                    Ký bằng số điện thoại
+                  </div>
+                </div>
+              </div>
+            </div>
                 <div class="participants--input" style="display: flex">
                   <div class="participants__name">
                     <div class="label_detail text-color">
@@ -1296,6 +1369,41 @@
                 class="col-md-10 participants__content--input"
                 style="display: flex; flex-direction: column"
               >
+
+                   <!--Chọn ký bằng email hoặc số điện thoại với người ký là cá nhân-->
+            <div class="participants--input" style="display: flex">
+              <div class="participants__name">
+                <div class="label_detail text-color">
+
+                  <div>
+                    <input *ngIf="!d.typeSign" type="radio" name="checkPhoneMailPerson_{{index}}_{{id}}" [value]=0 checked/>
+                  </div>&nbsp;
+
+                  <div>
+                    <input *ngIf="d.typeSign" [(ngModel)]="d.typeSign" type="radio" name="checkPhoneMailPerson_{{index}}_{{id}}" [value]=0/>
+                  </div>&nbsp;
+
+                  <div>
+                    Ký bằng email
+                  </div>
+                </div>
+              </div>
+              <div class="participants__name">
+                <div class="label_detail text-color">
+                  <div>
+                    <input *ngIf="!d.typeSign" type="radio" name="checkPhoneMailPerson_{{index}}_{{id}}" [value]=1/>
+                  </div>&nbsp;
+
+                  <div>
+                    <input *ngIf="d.typeSign" [(ngModel)]="d.typeSign" type="radio" name="checkPhoneMailPerson_{{index}}_{{id}}" [value]=1/>
+                  </div>&nbsp;
+                  <div>
+                    Ký bằng số điện thoại
+                  </div>
+                </div>
+              </div>
+            </div>
+
                 <div class="participants--input" style="display: flex">
                   <div class="participants__name">
                     <div class="label_detail text-color">
