--- a/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
@@ -13,7 +13,11 @@
         <div>{{'organization.me' | translate | uppercase}} -</div>
         <input type="text" [(ngModel)]="data_organization.name" disabled>
       </div>
+
+
       <div class="contract__content--participants">
+
+        <!--Người xem xét tổ chức-->
         <div class="participants-border">
           <div class="label">{{'user.view' | translate}}</div>
           <div class="participants--content" *ngFor="let d of getOriganzationReviewer(); let index = index">
@@ -21,6 +25,32 @@
                    [(ngModel)]="d.ordering"
                    oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');" [disabled]="getOriganzationReviewer().length == 1">
             <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
+
+                 <!--Chọn {{'Đăng nhập bằng email' | translate}} hoặc số điện thoại cho nguoi xem xet to chuc-->
+                 <div class="participants--input" style="display: flex">
+                  <div class="participants__name">
+                    <div class="label_detail text-color">
+  
+                      <div>
+                        <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailOrgViewer_{{index}}" [value]="email" [(ngModel)]="d.login_by"/>
+                      </div>&nbsp;
+                      <div>
+                        {{'Đăng nhập bằng email' | translate}}
+                      </div>
+                    </div>
+                  </div>
+                  <div class="participants__name">
+                    <div class="label_detail text-color">
+                      <div>
+                        <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailOrgViewer_{{index}}" [(ngModel)]="d.login_by" [value]="phone"/>
+                      </div>&nbsp;
+                      <div>
+                        {{'Đăng nhập bằng số điện thoại' | translate}}
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
               <div class="participants--input" style="display: flex">
                 <div class="participants__name">
                   <div class="label_detail text-color">{{'user.name' | translate}}&nbsp;<span class="required-title">*</span></div>
@@ -40,26 +70,24 @@
                   </div>
 
                 </div>
-              <!--              <div *ngIf="getOtp(d)" class="participants-otp" style="z-index: -1">-->
-              <!--                <input type="checkbox">-->
-              <!--                <span class="label text-color">OTP</span>-->
-              <!--              </div>-->
-                <div class="participants__name">
+           
+                <div class="participants__name" *ngIf="d.login_by == 'email'">
                   <div class="label_detail text-color">Email&nbsp;<span class="required-title">*</span></div>
                   <div class="input-data">
                     <img src="assets/img/login_email.svg" class="input-img">
                     <input type="text" placeholder="{{'nhap_email' | translate}}" [(ngModel)]="d.email">
                   </div>
                 </div>
-              </div>
-              <div class="participants--input" style="display: flex">
-                <div class="participants__name" style="width: 90%">
-                  <div class="label_detail text-color">Số điện thoại&nbsp;-&nbsp;<div style="color: #ffc107;">({{'Nhận thông báo khi xử lý hợp đồng' | translate}})</div></div>
+
+                <div class="participants__name" *ngIf="d.login_by == 'phone'">
+                  <div class="label_detail text-color">Số điện thoại&nbsp;<span class="required-title">*</span></div>
                   <div class="input-data">
-                    <input type="text" placeholder="{{'Nhập số điện thoại' | translate}}" [(ngModel)]="d.phone" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
+                    <img src="assets/img/login_email.svg" class="input-img">
+                    <input type="text" placeholder="{{'Nhập số điện thoại' | translate}}" [(ngModel)]="d.email">
                   </div>
                 </div>
               </div>
+             
             </div>
             <div class="col-md-1 delete-element" (click)="deleteOriganzationReviewer(index)">
               <img src="assets/img/border_close.svg" alt="close.vn">
@@ -70,6 +98,8 @@
             <u class="label text-color" (click)="addOriganzationReviewer()">{{'btn.add.user.view' | translate}}</u>
           </div>
         </div>
+
+        <!--Người ký tổ chức-->
         <div class="participants-border">
           <div class="label">{{'user.sign' | translate}}</div>
           <div class="participants--content" *ngFor="let d of getOriganzationSignature(); let index = index">
@@ -77,6 +107,32 @@
                    [(ngModel)]="d.ordering"
                    oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');" [disabled]="getOriganzationSignature().length == 1">
             <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
+
+               <!--Chọn {{'Đăng nhập bằng email' | translate}} hoặc số điện thoại cho nguoi xem xet to chuc-->
+               <div class="participants--input" style="display: flex">
+                <div class="participants__name">
+                  <div class="label_detail text-color">
+
+                    <div>
+                      <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailOrgSigner_{{index}}" [value]="email" [(ngModel)]="d.login_by"/>
+                    </div>&nbsp;
+                    <div>
+                      {{'Đăng nhập bằng email' | translate}}
+                    </div>
+                  </div>
+                </div>
+                <div class="participants__name">
+                  <div class="label_detail text-color">
+                    <div>
+                      <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailOrgSigner_{{index}}" [(ngModel)]="d.login_by" [value]="phone"/>
+                    </div>&nbsp;
+                    <div>
+                      {{'Đăng nhập bằng số điện thoại' | translate}}
+                    </div>
+                  </div>
+                </div>
+              </div>
+
               <div class="participants--input" style="display: flex">
                 <div class="participants__name">
                   <div class="label_detail text-color">{{'user.name' | translate}}&nbsp;<span class="required-title">*</span></div>
@@ -298,11 +354,11 @@
                 <div style="padding: 0 20px 0 5px">Có người điều phối</div>
 
 
-                <div *ngIf="getPartnerCoordination(item).length > 0 " style="display: flex">
+                <!-- <div *ngIf="getPartnerCoordination(item).length > 0 " style="display: flex">
                   <input type="checkbox" style="width: 17px; height: 17px;" *ngIf="getPartnerCoordination(item)[0].is_otp != 1" (change)="changeIsSmsCoordination($event, item, 0)">
                   <input type="checkbox" style="width: 17px; height: 17px;" *ngIf="getPartnerCoordination(item)[0].is_otp == 1" checked (change)="changeIsSmsCoordination($event, item, 0)">
                   <div style="padding: 0 20px 0 5px">Nhận SMS thông báo khi xử lý hợp đồng</div>
-                </div>
+                </div> -->
               </div>
             </div>
          </div>
@@ -310,27 +366,46 @@
           <div class="participants-border">
             <div class="label">{{'user.view' | translate}}</div>
             <div class="participants--content" *ngFor="let d of getPartnerReviewer(item); let index = index">
+
               <input [id]="'ordering-view-' + index" class="col-md-1 contract-total" (focusout)="onChangeValue($event,'ordering-view-' + index)" style="width: 25px; height: 25px" type="number"
                      [(ngModel)]="d.ordering" disabled
                      oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
-              <div class="col-md-10 participants--input">
-                <div class="participants__name">
-                  <div class="label_detail text-color">{{'user.name' | translate}}&nbsp;<span class="required-title">*</span></div>
-                  <div class="input-data" style="background-color: #f6f6f6;">
-                    <img src="assets/img/icon_name.svg" class="input-img">
-                    <input type="text" placeholder="{{'nhap_ho_va_ten' | translate}}" [(ngModel)]="d.name" disabled>
+              <div class="col-md-10 participants--input" style="display: flex; flex-direction: column">
+
+                 <!--Chọn {{'Đăng nhập bằng email' | translate}} hoặc số điện thoại cho nguoi xem xet to chuc-->
+                 <div class="participants--input" style="display: flex">
+                  <div class="participants__name">
+                    <div class="label_detail text-color">
+  
+                      <div>
+                        <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailOrgViewer_{{index}}" [value]="email" [(ngModel)]="d.login_by"/>
+                      </div>&nbsp;
+                      <div>
+                        {{'Đăng nhập bằng email' | translate}}
+                      </div>
+                    </div>
+                  </div>
+                  <div class="participants__name">
+                    <div class="label_detail text-color">
+                      <div>
+                        <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailOrgViewer_{{index}}" [(ngModel)]="d.login_by" [value]="phone"/>
+                      </div>&nbsp;
+                      <div>
+                        {{'Đăng nhập bằng số điện thoại' | translate}}
+                      </div>
+                    </div>
                   </div>
                 </div>
 
-                <div class="participants__name" >
-                  <div class="label_detail text-color"></div>
-                  <div style="height: 40px; display: flex; align-items: center;">
-                    <input type="checkbox" style="width: 17px; height: 17px;" *ngIf="d.is_otp != 1" (change)="changeIsSmsReviewer($event, item, index)">
-                    <input type="checkbox" style="width: 17px; height: 17px;" *ngIf="d.is_otp == 1" checked (change)="changeIsSmsReviewer($event, item, index)">
-                    <div style="padding: 0 20px 0 5px">Nhận SMS thông báo khi xử lý hợp đồng</div>
+                <div class="participants--input" style="display: flex">
+                  <div class="participants__name" style="width: 90%">
+                    <div class="label_detail text-color">{{'user.name' | translate}}&nbsp;<span class="required-title">*</span></div>
+                    <div class="input-data" style="background-color: #f6f6f6;">
+                      <img src="assets/img/icon_name.svg" class="input-img">
+                      <input type="text" placeholder="{{'nhap_ho_va_ten' | translate}}" [(ngModel)]="d.name" disabled>
+                    </div>
                   </div>
                 </div>
-                
               </div>
               <div class="col-md-1 delete-element" (click)="deletePartnerReviewer(index, item, id)">
                 <img src="assets/img/border_close.svg" alt="close.vn">
@@ -349,6 +424,32 @@
                      [(ngModel)]="d.ordering"
                      oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');" [disabled]="getPartnerSignature(item).length == 1">
               <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
+
+                  <!--Chọn {{'Đăng nhập bằng email' | translate}} hoặc số điện thoại cho nguoi xem xet to chuc-->
+                  <div class="participants--input" style="display: flex">
+                    <div class="participants__name">
+                      <div class="label_detail text-color">
+    
+                        <div>
+                          <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailParticipantSigner_{{index}}_{{id}}" [value]="email" [(ngModel)]="d.login_by"/>
+                        </div>&nbsp;
+                        <div>
+                          {{'Đăng nhập bằng email' | translate}}
+                        </div>
+                      </div>
+                    </div>
+                    <div class="participants__name">
+                      <div class="label_detail text-color">
+                        <div>
+                          <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailParticipantSigner_{{index}}_{{id}}" [(ngModel)]="d.login_by" [value]="phone"/>
+                        </div>&nbsp;
+                        <div>
+                          {{'Đăng nhập bằng số điện thoại' | translate}}
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
                 <div class="participants--input" style="display: flex">
                   <div class="participants__name">
                     <div class="label_detail text-color">{{'user.name' | translate}}&nbsp;<span class="required-title">*</span>
@@ -360,16 +461,8 @@
                              [(ngModel)]="d.name" disabled>
                     </div>
                   </div>
-                  <!--                  <div *ngIf="getOtp(d)" class="participants-otp" style="z-index: -1">-->
-                  <!--                    <input type="checkbox">-->
-                  <!--                    <span class="label text-color">OTP</span>-->
-                  <!--                  </div>-->
+
                   <div class="participants__name">
-                    <!-- <div class="label text-color">Email: <span class="required-title">*</span></div>
-                    <div class="input-data">
-                      <img src="assets/img/login_email.svg" class="input-img">
-                      <input type="text" placeholder="{{'nhap_email' | translate}}" [(ngModel)]="d.email">
-                    </div> -->
                     
                     <div class="label_detail text-color">{{'user.sign-type' | translate}}&nbsp;<span class="required-title">*</span></div>
 
@@ -390,7 +483,7 @@
                 </div>
 
                 
-
+<!-- 
                 <div class="participants--input" style="display: flex">
                   <div class="participants__name" style="width: 90%">
                     <div style="height: 40px; display: flex; align-items: center;">
@@ -399,7 +492,7 @@
                       <div style="padding: 0 20px 0 5px">Nhận SMS thông báo khi xử lý hợp đồng</div>
                     </div>
                   </div>
-                </div>
+                </div> -->
               </div>
               <div *ngIf="getPartnerSignature(item).length > 1 || this.getPartnerCoordination(item).length > 0"
                    class="col-md-1 delete-element" (click)="deletePartnerSignature(index, item)">
@@ -456,7 +549,7 @@
                   
                   </div>
                 </div>
-                <div class="participants--input" style="display: flex">
+                <!-- <div class="participants--input" style="display: flex">
                   <div class="participants__name" style="width: 90%">
                     <div style="height: 40px; display: flex; align-items: center;">
                       <input type="checkbox" style="width: 17px; height: 17px;" *ngIf="d.is_otp != 1" (change)="changeIsSmsDocument($event, item, index)">
@@ -464,7 +557,7 @@
                       <div style="padding: 0 20px 0 5px">Nhận SMS thông báo khi xử lý hợp đồng</div>
                     </div>
                   </div>
-                </div>
+                </div> -->
               </div>
               <div class="col-md-1 delete-element" (click)="deletePartnerDocument(index, item)">
                 <img src="assets/img/border_close.svg" alt="close.vn">
@@ -516,7 +609,7 @@
                     </ng-multiselect-dropdown>
                   </div>
                 </div>
-                <div class="participants--input" style="display: flex">
+                <!-- <div class="participants--input" style="display: flex">
                   <div class="participants__name" style="width: 90%">
                     <div style="height: 40px; display: flex; align-items: center;">
                       <input type="checkbox" style="width: 17px; height: 17px;" *ngIf="d.is_otp != 1" (change)="changeIsSmsSignature($event, item, index)">
@@ -524,7 +617,7 @@
                       <div style="padding: 0 20px 0 5px">Nhận SMS thông báo khi xử lý hợp đồng</div>
                     </div>
                   </div>
-                </div>
+                </div> -->
               </div>
               <div *ngIf="getPartnerSignature(item).length > 1" class="col-md-1 delete-element"
                    (click)="deletePartnerSignature(index, item)">
